# dominant-structural-variant-ranker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  verify_configs.py
configs/: auto3d_entropy.auto3d.yaml  auto3d_entropy_protocol.yaml  auto3d_entropy_smoke.yaml  auto3d_internal_enum.yaml  crest_disk_safe.yaml  default.yaml  exhaustive_debug.yaml  fast_smoke.yaml  ligprep_like_aggressive.yaml  ligprep_like_conservative.yaml  ligprep_like_default.yaml  physics_heavy.yaml  physics_validation_optional.yaml  production_balanced.yaml  production_conservative.yaml
docs/: architecture.md  codex_development.md  external_tools.md  file_formats.md  implementation_report.md  installation.md  ligprep_like_refactor_plan.md  ligprep_like_refactor_report.md  limitations.md  plausible_variant_workflow.md  workflow.md  workflow_redesign_report.md
examples/: example_config.yaml  test_molecules.smi  test_molecules_minimal.smi  test_molecules_troublemakers.smi
scripts/: bootstrap_conda.sh  bootstrap_mamba.sh  check_external_tools.sh  inspect_ci_run.py
tests/: test_agent.py  test_auto3d.py  test_auto3d_runner.py  test_boltzmann.py  test_censo_runner.py  test_cli.py  test_cli_config.py  test_config.py  test_conformers_rdkit.py  test_crest_runner.py  test_doctor.py  test_external_marked.py  test_fast_smoke.py  test_filtering.py  test_final_outputs.py  test_identifiers.py  test_inspect_ci_run.py  test_io_sdf.py  test_io_smiles.py  test_ligprep_cost_controls.py  test_progress_status.py  test_protonation.py  (+18 more)
(+72 files in other folders)
